--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
   var request = new XMLHttpRequest();
   request.onload = printRepoCount;
-  request.open('get', 'https://api.github.com/users/funchal', true)
-  request.send()
+  request.open('get', 'https://api.github.com/users/mdjhoel@gmail.com', true);
+  request.send();
   
 </script>
 
