--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   var request = new XMLHttpRequest();
   request.onload = printRepoCount;
-  request.open('get', 'https://api.github.com/users/mdjhoel@gmail.com', true);
+  request.open('get', 'https://api.github.com/users/mdjhoel', true);
   request.send();
   
 </script>
