update firebase configuration

--- a/index.html
+++ b/index.html
@@ -12,21 +12,18 @@
   <script src="js/angular-sanitize.min.js"></script>
 
   <script src="js/teacherapp.js"></script>
-  <!-- FAKE <meta name="google-signin-client_id" content="654063655689-o89ulc1ejks5j73i026497ckrob9f9ul.apps.googleusercontent.com">-->
-
   <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
   
-
   <script>
     // Initialize Firebase
     var config = {
-      apiKey: "AIzaSyAxwOktlK7WPu3Y4ZbKTB3qY4XBtbfOht4",
-      authDomain: "mytest-186212.firebaseapp.com",
-      databaseURL: "https://mytest-186212.firebaseio.com",
-      projectId: "mytest-186212",
+      apiKey: "AIzaSyBVtxn_jTK6QSvvUrGLWRnuTO1Y1YAOWEA",
+      authDomain: "gameof5-4e8a1.firebaseapp.com",
+      databaseURL: "https://gameof5-4e8a1.firebaseio.com/",
+      projectId: "gameof5-4e8a1",
       storageBucket: "",
-      messagingSenderId: "654063655689"
+      messagingSenderId: ""
     };
     firebase.initializeApp(config);
   </script>
