--- a/index.html
+++ b/index.html
@@ -95,6 +95,17 @@
         </div>
       </div>
   </div>
+	
+  <div id="modaldownload" class="modal center">
+      <div class="modal-content">
+      	<h4>Copy and Paste your data</h4>
+        <p>{{alldata}}</p>
+        
+        <div class="modal-footer">
+          <a href="#!" class="modal-action modal-close btn-flat">Dismiss</a>
+        </div>
+      </div>
+  </div>
 
 </body>
 
