--- a/index.html
+++ b/index.html
@@ -98,10 +98,12 @@
 	
   <div id="modaldownload" class="modal center">
       <div class="modal-content">
-      	<h4>Copy and Paste your data</h4>
+        <h4>Share your course</h4>
+        <p>{{share}}</p>      	
+      	<h4>Backup your data</h4>
         <p>{{alldata}}</p>
         
-        <div class="modal-footer">
+        <div class="modal-fixed-footer">
           <a href="#!" class="modal-action modal-close btn-flat">Dismiss</a>
         </div>
       </div>
