added row for Mozilla

--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
   <div class="container">
     <div class="row">
       
-    <div ng-include="navPath"></div>
-    <!--<div class="btn blue white-text right" ng-hide="loggedIn" ng-click="signin()" style="margin-bottom: 10px;">Sign in</div>-->
-	  
+    	<div ng-include="navPath"></div>
+    	<!--<div class="btn blue white-text right" ng-hide="loggedIn" ng-click="signin()" style="margin-bottom: 10px;">Sign in</div>-->
+    </div>
+	<div class="row">
       <hr style='color: #2196f3; background-color: #2196f3; height: 3px; width: 100%;'>
 
       <!--<div ng-view onload="finishLoading()"></div>-->
