--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
         <h4>Share your course</h4>
         <p>{{share}}</p>      	
       	<h4>Backup your data</h4>
+	<p>Hint: Copy and paste in a <a href='https://jsonlint.com/' target='_blank'>JSON validator</a> for pretty views of your data.</p>
         <p>{{alldata}}</p>
         
         <div class="modal-fixed-footer">
