--- a/index.html
+++ b/index.html
@@ -126,6 +126,11 @@
   	$('.modal').modal();
   });
 
+  document.addEventListener('DOMContentLoaded', function() {
+    var elems = document.querySelectorAll('.collapsible');
+    var instances = M.Collapsible.init(elems, options);
+  });
+
   // Common footer for pages
   function setFooter() {
     var footerDoc = document.getElementById("g5footer");
