added jsPDF link

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="js/angular.min.js"></script>
   <script src="js/angular-route.js"></script>
   <script src="js/angular-sanitize.min.js"></script>
+  <script src="js/jspdf135.js"></script>
 
   <script src="js/teacherapp.js"></script>
   <!-- Firebase -->
