remove header link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body ng-app="teacherpages">
 
 <!-- logo -->
-  <div width='300px' id="g5header" align="center"><a href="" ng-click="nav('includes/admin_signin.html')"><img src="images/header.svg"/></a></div>
+  <div width='300px' id="g5header" align="center"><img src="images/header.svg"/></div>
  
   <div class="container">
     <div class="row">
