add github to footer

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
             temphtml = temphtml + "<li><a class='black-text text-lighten-3' href='https://design.google/' target='_blank'>Google Design</a></li>";
             temphtml = temphtml + "<li><a class='black-text text-lighten-3' href='https://firebase.google.com/' target='_blank'>Firebase</a></li>";
             temphtml = temphtml + "<li><a class='black-text text-lighten-3' href='https://angularjs.org/' target='_blank'>AngularJS</a></li>";
+	    temphtml = temphtml + "<li><a class='black-text text-lighten-3' href='https//github.com' target='_blank'>Github</a></li>";
           temphtml = temphtml + "</ul>";
         temphtml = temphtml + "</div></div>";
 
