updated backup/share modal

--- a/index.html
+++ b/index.html
@@ -99,19 +99,72 @@
       </div>
   </div>
 	
-  <div id="modaldownload" class="modal center">
+  <style>
+    .svg-share:hover ellipse {
+      stroke: #000;
+      fill: #000;
+    }
+  </style>
+
+  <div id="modaldownload" class="modal modal-fixed-footer">
       <div class="modal-content">
-        <h4>Share your course</h4>
-        <p>{{share}}</p>      	
-      	<h4>Backup your data (reload to update)</h4>
-	<p>Hint: Copy and paste in a <a href='http://jsoneditoronline.org/' target='_blank'>JSON validator</a> for pretty views of your data.</p>
-        <p>{{alldata}}</p>
-        
-        <div class="modal-fixed-footer">
+        <h4>Share <span style="color: #8bc34a;">{{cname}}</span>
+          <a href="" ng-click="helpToast('Invite your users using this URL.',5000,'black')">
+              <svg class="svg-class" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+                <ellipse ry="11" rx="11" cy="12" cx="12" stroke="#2196f3" fill="#fff"/>
+                <text font-style="normal" transform="matrix(2.25929, 0, 0, 0.870395, -7.11379, -0.393831)" xml:space="preserve" text-anchor="start" font-family="Helvetica, Arial, sans-serif" font-size="16" id="svg_2" y="20" x="6.5" stroke-width="0" stroke="#2196f3" fill="#2196f3">i</text>
+              </svg>
+          </a>
+        </h4>
+        <table>
+          <tr>
+            <td >
+              <svg class="svg-share" width="30" height="30" xmlns="http://www.w3.org/2000/svg">
+                <line y2="15" x2="5" y1="5" x1="25" stroke-width="1.5" stroke="#999999"/>
+                <line y2="15" x2="5" y1="25" x1="25" stroke-width="1.5" stroke="#999999"/>
+                <ellipse ry="2" rx="2" cy="15" cx="5" stroke-width="2.5" stroke="#999999" fill="#999999"/>
+                <ellipse ry="2" rx="2" cy="5" cx="25" stroke-width="2.5" stroke="#999999" fill="#999999"/>
+                <ellipse ry="2" rx="2" cy="25" cx="25" stroke-width="2.5" stroke="#999999" fill="#999999"/>
+              </svg>
+            </td>
+            <td>{{share}}</td>
+          </tr>
+        </table>     	
+      	<h4>Backup your data
+            <a href="" ng-click="helpToast('Copy and paste in a JSON validator for pretty views of your data.',5000,'black')">
+              <svg class="svg-class" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+                <ellipse ry="11" rx="11" cy="12" cx="12" stroke="#2196f3" fill="#fff"/>
+                <text font-style="normal" transform="matrix(2.25929, 0, 0, 0.870395, -7.11379, -0.393831)" xml:space="preserve" text-anchor="start" font-family="Helvetica, Arial, sans-serif" font-size="16" id="svg_2" y="20" x="6.5" stroke-width="0" stroke="#2196f3" fill="#2196f3">i</text>
+              </svg>
+           </a>
+        </h4>
+
+        <div class="collection">
+            <a href="" class="collection-item" ng-click="showme = !showme">Admin</a>
+              <div ng-show="showme" class="card horizontal z-depth-0" style="margin-bottom: 0px;">
+                <div class="card-content">
+                  <p>{{admin}}</p>
+                </div>
+              </div>
+              <a href="" class="collection-item" ng-click="showme1 = !showme1">Readonly</a>
+              <div ng-show="showme1" class="card horizontal z-depth-0" style="margin-bottom: 0px;">
+                <div class="card-content">
+                  <p>{{readonly}}</p>
+                </div>
+              </div>
+              <a ng-show="users != undefined" href="" class="collection-item" ng-click="showme2 = !showme2">Users</a>
+              <div ng-show="showme2" class="card horizontal z-depth-0" style="margin-bottom: 0px;">
+                <div class="card-content">
+                  <p>{{users}}</p>
+                </div>
+              </div>
+          </div>
+          <p>* view and prettify your data using a <a href='https://jsoneditoronline.org/' target='_blank'>JSON editor</a></p>
+        </div>
+
+        <div class="modal-footer">
           <a ng-click="setUrl()" class="modal-action modal-close btn-flat">Dismiss</a>
         </div>
-      </div>
-  </div>
 
 </body>
 
