set width of header to 200px, for Edge browser

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body ng-app="teacherpages">
 
 <!-- logo -->
-  <div width='300px' id="g5header" align="center"><img src="images/header.svg"/></div>
+  <div id="g5header" align="center"><img width="200px" src="images/header.svg"/></div>
  
    <div class="container">
     <div class="row">
