fixed hr for firefox

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 <body>
 	<div id="g5header" align="center"><img width="200px" src="images/header.svg"/></div> <!-- logo -->
  	<div class="container">
+        <div class="row">
+          <hr style='color: #2196f3; background-color: #2196f3; height: 3px; width: 100%;'>
+        </div>
     	<div class="row">
-    		<hr style='color: #2196f3; background-color: #2196f3; height: 3px; width: 100%;'>
     		<div class="col s12 m6">
     			<div class="card-panel white hoverable">
     				<svg viewBox='0 0 600 100' xmlns="http://www.w3.org/2000/svg">
@@ -118,12 +120,16 @@
     </ul>
             <div>
               <p>gameof5 provides a fast and intuitive set of data editing tools to help you input and manage your lessons, badges, levels, quizzes, and daily comments, as well as keep track of how your users are doing. Sign in to start playing!</p>
-    			   </div>
+    	    </div>
           </div>
     		</div>
-  			<hr style='color: #2196f3; background-color: #2196f3; height: 3px; width: 100%;'>
-			<div id="g5footer"></div>    
   		</div> <!-- end row -->
+
+
+        <div class="row">
+          <hr style='color: #2196f3; background-color: #2196f3; height: 3px; width: 100%;'>
+        </div>
+        <div id="g5footer"></div>  
   	</div> <!-- container -->
 </body>
 
