changed wording of sign in

--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
 						  <text fill="#ffffff" stroke="#2196f3" stroke-width="0" x="474.5" y="65.5" id="svg_2" font-size="64" font-family="Helvetica, Arial, sans-serif" text-anchor="start" xml:space="preserve">r</text>
 						  <text fill="#ffffff" stroke="#2196f3" stroke-width="0" x="545.5" y="65.5" id="svg_5" font-size="64" font-family="Helvetica, Arial, sans-serif" text-anchor="start" xml:space="preserve">s</text>
 					</svg>
-    				Start creating your lessons and gamifying your courses. Your only requirement is that you have a <a href="https://google.com" target="_blank">Google account</a>. 
+    				Do you and your students have <a href="https://google.com" target="_blank">Google accounts? If so, you can start creating your lessons and gamifying your courses.</a>. 
     				<p><a href="w.html" target="_blank" class="waves-effect waves-light btn blue">sign in</a></p>
     			</div>
     			<div class="card-panel white hoverable"> 
-  <ul class="collection with-header">
-  <li class="collection-item avatar">
-                <img src="images/boy.svg" class="circle">
-                <p>Joe Doe (jdoe@gmail.com)</p>
-                <p>Level: Acolyte<br><b>Points: 22</b> | Daily: 12 | Quizzes: 7 | Badges: 3</p>
-              </li>
-            </ul>
+  				<ul class="collection with-header">
+  				<li class="collection-item avatar">
+                		<img src="images/boy.svg" class="circle">
+                		<p>Joe Doe (jdoe@gmail.com)</p>
+                		<p>Level: Acolyte<br><b>Points: 22</b> | Daily: 12 | Quizzes: 7 | Badges: 3</p>
+              			</li>
+            			</ul>
     				<p>How do I use gameof5 to organize, structure, present and gamify my courses? Get your answers here.</p>
     				<p><a href="blog/index.html" target="_blank" class="waves-effect waves-light btn blue">Blog</a></p>
     			</div>
