--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 						  <text fill="#ffffff" stroke="#2196f3" stroke-width="0" x="474.5" y="65.5" id="svg_2" font-size="64" font-family="Helvetica, Arial, sans-serif" text-anchor="start" xml:space="preserve">r</text>
 						  <text fill="#ffffff" stroke="#2196f3" stroke-width="0" x="545.5" y="65.5" id="svg_5" font-size="64" font-family="Helvetica, Arial, sans-serif" text-anchor="start" xml:space="preserve">s</text>
 					</svg>
-    				Do you and your students have <a href="https://google.com" target="_blank">Google accounts? If so, you can start creating your lessons and gamifying your courses.</a>. 
-    				<p><a href="w.html" target="_blank" class="waves-effect waves-light btn blue">sign in</a></p>
+    				Do you and your students have <a href="https://google.com" target="_blank">Google accounts?</a>. 
+    				<p><a href="w.html" target="_blank" class="waves-effect waves-light btn blue">Get started</a></p>
     			</div>
     			<div class="card-panel white hoverable"> 
   				<ul class="collection with-header">
