--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     			<div class="card-panel white hoverable">
     			<p style="vertical-align: top; padding-top: 0px; margin-top: 0px;"><span style="font-size: 3em; font-family: times;">gameof5</span><br>
     			Noun  -  / game-of-5 /</p>
-    			<p>A play on the education term <a href='https://en.wikipedia.org/wiki/Gamification_of_learning' target='_blank'>gamify</a>. To gamify is to introduce elements of game play into learning to increase student engagement. Gameof5 helps teachers organize, structure, present and most importantly gamify their courses.</p>
+    			<p>Gameof5 is a play on the education term <a href='https://en.wikipedia.org/wiki/Gamification_of_learning' target='_blank'>gamify</a>. To gamify is to introduce elements of game play into learning to increase student engagement.</p>
     			</div>
 
           <style>
@@ -119,7 +119,7 @@
       </a></li>
     </ul>
             <div>
-              <p>gameof5 provides a fast and intuitive set of data editing tools to help you input and manage your lessons, badges, levels, quizzes, and daily comments, as well as keep track of how your users are doing. Sign in to start playing!</p>
+              <p>Gameof5 provides a fast and intuitive set of data editing tools to help you input and manage your lessons, badges, levels, quizzes, and daily comments, as well as keep track of how your users are doing. Get started now!</p>
     	    </div>
           </div>
     		</div>
