added link to {{share}}

--- a/w.html
+++ b/w.html
@@ -155,7 +155,7 @@
                 <ellipse ry="2" rx="2" cy="25" cx="25" stroke-width="2.5" stroke="#999999" fill="#999999"/>
               </svg>
             </td>
-            <td>{{share}}</td>
+            <td><a href='{{share}}' target='_blank'>{{share}}</a></td>
           </tr>
         </table>     	
       	<h4>Backup your data
