changed wording on save settings - not so scary!

--- a/w.html
+++ b/w.html
@@ -142,7 +142,7 @@
   <div id="modalsettings" class="modal">
       <div class="modal-content">
         <h4>Save edits</h4>
-        <p>You are about to save your edits back to the server.</p><p>This will overwrite your existing data. Are you sure you wish to do this?</p>
+        <p>You are about to save your edits back to the server.</p><p>This will overwrite your existing settings. Are you sure you wish to do this?</p>
         
         <div class="modal-footer">
           <a ng-click="savesettings()" class="modal-action modal-close btn-flat">Yes</a>
