added myschool modal

--- a/w.html
+++ b/w.html
@@ -59,7 +59,21 @@
   	
     <!-- container -->
   </div>
-  
+
+  <!-- #Teacher Apply Modal -->
+  <div id="modalschool" class="modal">
+      <div class="modal-content">
+        <h4>Welcome Teacher!</h4>
+        <p>Thanks for trying out gameof5. You are automatically approved and can start creating your courses now.</p>
+        <p>Remember, nothing will be saved to the server until you click the save button.</p>
+        <p>If you are a student, please ask your teacher to share your course link with you :-)</p>
+        
+        <div class="modal-footer">
+          <a onclick="setUrl()" class="modal-action modal-close btn-flat">Dismiss</a>
+        </div>
+      </div>
+  </div>
+
    <!-- #upload Modal -->
   <div id="modalupload" class="modal center">
       <div class="modal-content">
