split share and download modals

--- a/w.html
+++ b/w.html
@@ -186,30 +186,9 @@
     }
   </style>
 
-  <div id="modaldownload" class="modal modal-fixed-footer">
+    <div id="modaldownload" class="modal modal-fixed-footer">
       <div class="modal-content">
-        <h4>Share <span style="color: #8bc34a;">{{cname}}</span>
-          <a href="" ng-click="helpToast('Invite your users using this URL.',5000,'black')">
-              <svg class="svg-class" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
-                <ellipse ry="11" rx="11" cy="12" cx="12" stroke="#2196f3" fill="#fff"/>
-                <text font-style="normal" transform="matrix(2.25929, 0, 0, 0.870395, -7.11379, -0.393831)" xml:space="preserve" text-anchor="start" font-family="Helvetica, Arial, sans-serif" font-size="16" id="svg_2" y="20" x="6.5" stroke-width="0" stroke="#2196f3" fill="#2196f3">i</text>
-              </svg>
-          </a>
-        </h4>
-        <table>
-          <tr>
-            <td >
-              <svg class="svg-share" width="30" height="30" xmlns="http://www.w3.org/2000/svg">
-                <line y2="15" x2="5" y1="5" x1="25" stroke-width="1.5" stroke="#999999"/>
-                <line y2="15" x2="5" y1="25" x1="25" stroke-width="1.5" stroke="#999999"/>
-                <ellipse ry="2" rx="2" cy="15" cx="5" stroke-width="2.5" stroke="#999999" fill="#999999"/>
-                <ellipse ry="2" rx="2" cy="5" cx="25" stroke-width="2.5" stroke="#999999" fill="#999999"/>
-                <ellipse ry="2" rx="2" cy="25" cx="25" stroke-width="2.5" stroke="#999999" fill="#999999"/>
-              </svg>
-            </td>
-            <td><a href='{{share}}' target='_blank'>{{share}}</a></td>
-          </tr>
-        </table>     	
+
       	<h4>Backup your data
             <a href="" ng-click="helpToast('Copy and paste in a JSON validator for pretty views of your data.',5000,'black')">
               <svg class="svg-class" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
@@ -254,9 +233,49 @@
           <p>* view and prettify your data using a <a href='https://jsoneditoronline.org/' target='_blank'>JSON editor</a></p>
         </div>
 
+          <div class="modal-footer">
+            <a ng-click="setUrl()" class="modal-action modal-close btn-flat">Dismiss</a>
+          </div>
+        </div>
+
+  <div id="modalshare" class="modal modal-fixed-footer">
+      <div class="modal-content">
+        <h4>Share <span style="color: #8bc34a;">{{cname}}</span>
+          <a href="" ng-click="helpToast('Invite your users to your gameof5 class<br>by emailing your class list this API URL.',5000,'black')">
+              <svg class="svg-class" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+                <ellipse ry="11" rx="11" cy="12" cx="12" stroke="#2196f3" fill="#fff"/>
+                <text font-style="normal" transform="matrix(2.25929, 0, 0, 0.870395, -7.11379, -0.393831)" xml:space="preserve" text-anchor="start" font-family="Helvetica, Arial, sans-serif" font-size="16" id="svg_2" y="20" x="6.5" stroke-width="0" stroke="#2196f3" fill="#2196f3">i</text>
+              </svg>
+          </a>
+        </h4>
+        <table>
+          <tr>
+            <td><img src="images/email.svg"/></td>
+          </tr>
+          <tr>
+            <td>
+                <a href='{{share}}' target='_blank'>{{share}}</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <h5>User Sign-up Process</h5>
+               <ol>
+                  <li>Create a class email list and send them this API URL</li>
+                  <li>After all students have clicked the link, refresh your gameof5 Admin view</li>
+                  <li>View new students using the Edit Users tool</li>
+                  <li>Save new users as part of your class (click checkbox to OK users)</li>
+                  <li>Students can then refresh their gameof5 API URL and they will be in!</li>
+               </ol>
+            </td>
+          </tr>
+        </table> 
+        </div>
+
         <div class="modal-footer">
           <a ng-click="setUrl()" class="modal-action modal-close btn-flat">Dismiss</a>
         </div>
+  </div>
 
 </body>
 
