update share instructions

--- a/w.html
+++ b/w.html
@@ -250,10 +250,10 @@
               <h5>User Sign-up Process</h5>
                <ol>
                   <li>Create a class email list and send them this API URL</li>
-                  <li>After all students have clicked the link, refresh your gameof5 Admin view</li>
+                  <li>Students follow the link to request access</li>
                   <li>View new students using the Edit Users tool</li>
                   <li>Save new users as part of your class (click checkbox to OK users)</li>
-                  <li>Students can then refresh their gameof5 API URL and they will be in!</li>
+                  <li>Students refresh gameof5 API URL and they will be in!</li>
                </ol>
             </td>
           </tr>
