--- a/w.html
+++ b/w.html
@@ -141,7 +141,7 @@
   </div> 
     
   <!-- #Save settings Modal -->
-  <div id="modalsettings" class="modal">
+  <div id="modalcheck" class="modal">
       <div class="modal-content">
         <h4>Save edits</h4>
         <p>You are about to save your edits back to the server.</p><p>This will overwrite your existing settings. Are you sure you wish to do this?</p>
