switched user.photoUrl to photoUrl
profile modal wasnt showing photo

--- a/w.html
+++ b/w.html
@@ -163,7 +163,7 @@
   <div id="modalprofile" class="modal center">
       <div class="modal-content">
         <h4>{{name}}</h4>
-        <img ng-src="{{user.photoUrl}}" width="200px" style="border-radius:50%;">
+        <img ng-src="{{photoUrl}}" width="200px" style="border-radius:50%;">
         <p>{{email}}</p>
         
         <div class="modal-footer">
