--- a/s.html
+++ b/s.html
@@ -43,6 +43,9 @@
           background-color: blue;
           padding: 10px;
       }
+      table, tr, td {
+          padding: 0px;
+      }
       
   </style>
      
@@ -213,17 +216,27 @@
                 <li class="collection-item cyan white-text">
                     <p>Top comments</p>
                 </li>
-                <li class="collection-item avatar" ng-repeat="daily in readonly.daily" ng-show="user.daily[$index].grade != 3 && user.daily[$index].grade != null">
+		<li class="collection-item avatar" ng-repeat="daily in readonly.daily" ng-show="user.daily[$index].grade != 3 && user.daily[$index].grade != null">
                   <img ng-src="images/badges/{{user.daily[$index].badge}}.svg" class="circle"/>
-                  <p class="title"><a href="#modallesson" class="modal-action modal-trigger" ng-click=setDataById(daily.id.id)>{{daily.id.name}}</a></p>
-                  <p>{{user.daily[$index].desc}}</p>
-		  <p ng-show=user.daily[$index].mydate != undefined">{{user.daily[$index].mydate}}</p>
-                  <div href="#!" class="secondary-content">
-                    <p ng-show="user.daily[$index].grade == 4" class="chip orange white-text">{{user.daily[$index].grade}}</p>
-                    <p ng-show="user.daily[$index].grade == 3" class="chip blue white-text">{{user.daily[$index].grade}}</p>
-                      <p ng-show="user.daily[$index].grade == 2" class="chip pink lighten-2 white-text">{{user.daily[$index].grade}}</p>
-                      <p ng-show="user.daily[$index].grade < 2" class="chip red white-text">{{user.daily[$index].grade}}</p>
-                  </div>              
+                  <table>
+                  <tr>
+                    <td><a href="#modallesson" class="modal-action modal-trigger" ng-click=setDataById(daily.id.id)>{{daily.id.name}}</a></td>
+                  </tr>
+                  <tr>
+                      <td width="95%">{{user.daily[$index].desc}}</td>
+                      <td width="5%">
+                        <div href="#!" >
+                          <p ng-show="user.daily[$index].grade == 4" class="chip orange white-text">{{user.daily[$index].grade}}</p>
+                          <p ng-show="user.daily[$index].grade == 3" class="chip blue white-text">{{user.daily[$index].grade}}</p>
+                          <p ng-show="user.daily[$index].grade == 2" class="chip pink lighten-2 white-text">{{user.daily[$index].grade}}</p>
+                          <p ng-show="user.daily[$index].grade < 2" class="chip red white-text">{{user.daily[$index].grade}}</p>
+                        </div>       
+                      </td>
+                  </tr>
+                  <tr>
+                      <td><span ng-show="user.daily[$index].mydate != undefined">{{user.daily[$index].mydate}}</span></td>
+                  </tr>
+                  </table>    
                 </li>
               </ul>
         </div>
