removed points total for leaders

--- a/s.html
+++ b/s.html
@@ -139,7 +139,7 @@
                             <br>
                             <img ng-show="cur_user.photoUrl.indexOf('/mo/') <0" ng-src='{{cur_user.photoUrl}}' alt="{{cur_user.name}}" height='50px' class="circle" onerror="this.src='images/tyler-durden.jpg'">
                             <img ng-show="cur_user.photoUrl.indexOf('/mo/') >0" ng-src='images/tyler-durden.jpg' alt="{{cur_user.name}}" height='50px' class="circle" onerror="this.src='images/tyler-durden.jpg'">
-                            <span class="title">{{cur_user.name}} - {{cur_user.pointstotal}}</span>
+                            <span class="title">{{cur_user.name}}</span>
                           </li>
                       </ul>
 
