--- a/s.html
+++ b/s.html
@@ -46,6 +46,8 @@
       table, tr, td {
           padding: 0px;
       }
+
+      .modal { width: 70% !important ; height: 70% !important ; }
       
   </style>
      
