dismissible: false for modals
want setUrl() to be called, avoid confusion

--- a/s.html
+++ b/s.html
@@ -333,7 +333,7 @@
 
   $(document).ready(function(){
     // the "href" attribute of the modal trigger must specify the modal ID that wants to be triggered
-  	$('.modal').modal();
+  	$('.modal').modal({dismissible: false});
 	$('.tooltipped').tooltip({delay: 50});
   });
 
